--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
+    <style href="miestilo.css"></style>
 <body>
     <h1>Aqui iria el titulo de la pagina</h1>
     <p>Esto es un parrafo</p>
